Add date modified to bottom of pages

--- a/emp-loc-eng.html
+++ b/emp-loc-eng.html
@@ -71,6 +71,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<p><img src="images/carte-map-eng.jpg" width="450" height="252" alt="Map of the coast of North America" /></p>
 					<p><img src="images/carte-map-2-eng.jpg" width="450" height="360" alt="Dock location near Victoria" /></p>
 				</div>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
