--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -87,6 +87,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					him was the cooperation between <abbr title="Public Works and Government Services Canada">PWGSC</abbr>, the Departmetn of National Defence,
 					and the private sector: &quot;It was really proactive all the way around.&quot; </p>
 				<p><em>Source: Ensemble, August&nbsp;2000, Volume&nbsp;8, No.&nbsp;6</em></p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
