--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -146,6 +146,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<p>&quot;This is a real success,&quot; says Mr. Lawes. &quot;Everyone is pleased. Sometimes
 					the best solutions are the simplest.&quot; </p>
           </div>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
