--- a/merci-thankyou-eng.html
+++ b/merci-thankyou-eng.html
@@ -62,6 +62,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<p>Thank you for contacting the <a href="/pac/cse-egd/index-eng.html">Esquimalt
 						Graving Dock</a> at Public Works and Government Services Canada. We will
 						respond as soon as possible.</p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
