--- a/rendement-performance-eng.html
+++ b/rendement-performance-eng.html
@@ -101,6 +101,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 				</dl>
 				<p><strong>Note: this document will be updated annually.</strong></p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
