--- a/services-eng.html
+++ b/services-eng.html
@@ -121,7 +121,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
           <p>
           The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that <abbr title="Esquimalt Graving Dock">EGD</abbr> maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do <abbr title="Esquimalt Graving Dock">EGD</abbr> employees work in a safe and secure environment, but also employees of the companies that operate out of the <abbr title="Esquimalt Graving Dock">EGD</abbr> facility.  
           </p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
 
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
