--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -197,6 +197,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				Email: <a href="mailto:melissa.piasta@pwgsc-tpsgc.gc.ca">melissa.piasta@pwgsc-tpsgc.gc.ca</a><br />
 			  Telephone: 250-363-3961	
 		  </p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
