--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -105,6 +105,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<abbr title="Public Works and Government Services Canada">PWGSC</abbr>, the Esquimalt Graving Dock will be one of the best
 					options.</p>
 				<p><em>Source: Ensemble, July 2000, Volume&nbsp;8</em></p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
