--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -87,6 +87,11 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<li><a href="his/1926-eng.html">History&nbsp;1926</a></li>
 					<li><a href="his/1927-eng.html">History&nbsp;1927</a></li>
 				</ul>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
+
+<div class="clear"></div>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
