Fix broken links

--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -159,7 +159,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 							you wish to avail yourself of this right or require clarification about
 							this Statement, contact our Privacy Coordinator at <a href="mailto:AIPRP.ATIP@tpsgc-pwgsc.gc.ca">AIPRP.ATIP@tpsgc-pwgsc.gc.ca</a>.
 							For more information on privacy issues and the <em>Privacy Act</em> consult
-							the <a href="http://www.priv.gc.ca/index_e.cfm">Privacy Commissioner's
+							the <a href="http://www.priv.gc.ca/index_e.asp">Privacy Commissioner's
 							Web site</a>.</p>
 				<p>For more information about your rights, see <a href="http://infosource.gc.ca/index_e.asp">Info
 						Source</a>. This is a Government of Canada publication available in major
