--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -57,7 +57,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1>Dock Dimensions</h1>
+<h1 id="wb-cont">Dock Dimensions</h1>
 			<img src="images/dimensions.jpg" alt="Plan View and Longitudinal Section of Esquimalt Graving Dock with various dimensions, details in text following the image." width="740"  style="width: 740px; " />
 			
 		<div class="smallFont" style="font-weight:bold; width:730px; margin-bottom:40px;">
