Use dynamic date modified in meta tags

--- a/entreprises-firms-eng.html
+++ b/entreprises-firms-eng.html
@@ -10,6 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
+<title>Ships Repair Firms - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Esquimalt Graving Dock ship repair firms." />
@@ -17,7 +18,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Ships Repair Firms - EGD - PWGSC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Maintenance" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, repair firms" />
