--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -18,7 +18,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 <meta name="dcterms.title" content="Politique environnementale - CSE - TPSGC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Navire; Quai; Politique environnementale; Déclaration" />
 <meta name="dcterms.language" title="ISO639-2" content="fra" />
 <meta name="keywords" content="cale seche d'Esquimalt, ISO 14001, environnement, gestion, programmes, sant&eacute;, s&eacute;curit&eacute;" />
