--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -17,7 +17,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, ISO 14001, environment, management, programs, health;, safety" />
