Add date modified to content

--- a/avis-notices-eng.html
+++ b/avis-notices-eng.html
@@ -82,6 +82,9 @@ Please be advised that when dry or wet docking requests are submitted, every att
 <p>
   Commencing January 1, 2010 all users of the Esquimalt Graving Dock will be required to utilize all the services provided by the Esquimalt Graving Dock including the crane service provided by the Esquimalt Graving Dock's multiple cranes.  This includes all dry dockings and/or wet dockings where cargo and/or vessels are both being loaded and/or unloaded.  The only time that onboard cranes or other cranes will be permitted to be used are when none of the Esquimalt Graving Dock's cranes are  available for use due to operational commitments, and the use of any "other" cranes must be discussed prior to the utilization of any "other" cranes.  If any Agents and/or ship repair firms fail to utilize the Esquimalt Graving Dock's crane(s), without prior consent from the management of the Esquimalt Graving Dock, then charges will be applied at the "standby rate" which is the full main hook charge out rate per hour, during the period that the "other" cranes are being utilized.
 </p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
