--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -275,6 +275,9 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<li>Not entering into a new lease; or</li>
 					<li>Not renewing an existing lease</li>
 				</ul>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
