--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -168,6 +168,9 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<p>The Internet is a public forum and electronic information can be intercepted.
 					This is not a secure Web site. Please do not disclose unnecessary confidential
 					information about yourself or your accounts with <abbr title='Public Works and Government Services Canada'>PWGSC</abbr>. </p>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
