--- a/his/1926-eng.html
+++ b/his/1926-eng.html
@@ -18,7 +18,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
 <meta name="dcterms.title" content="History 1926 - EGD - PWGSC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; History" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
 <meta name="keywords" content="Esquimalt Graving Dock, history" />
