--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -18,7 +18,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
 <meta name="dcterms.title" content="Article sur le QE - CSE - TPSGC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
-<meta name="dcterms.modified" title="W3CDTF" content="2011-12-16" />
+<meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Navire; Quai; Histoire; Navire de croisière" />
 <meta name="dcterms.language" title="ISO639-2" content="fra" />
 <meta name="keywords" content="cale seche d'Esquimalt, historique" />
