Make titles match

--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -16,7 +16,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <meta name="description" content="Esquimalt Graving Dock's environmental program." />
 <meta name="dcterms.description" content="Esquimalt Graving Dock's environmental program." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dcterms.title" content="Environmental Program - EGD - PWGSC" />
+<meta name="dcterms.title" content="Environment - EGD - PWGSC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Environmental programs; Environment; Environmental policy; Air quality; Water management; Waste management; Hazardous materials; Energy conservation; Nature conservation" />
