--- a/his/1921-fra.html
+++ b/his/1921-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Historique 1921 &ndash; 1923 - CSE - TPSGC</title>
+<title>Historique 1921 - 1923 - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Historique de la cale seche d'Esquimalt" />
