--- a/his/1927-eng.html
+++ b/his/1927-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>History&nbsp;1927 &ndash; EGD &ndash; PWGSC</title>
+<title>History 1927 - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="History of the Esquimalt Graving Dock" />
@@ -49,7 +49,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
 <li><a href="../historique-history-eng.html">History</a></li>
-<li>History&nbsp;1927</li>
+<li>History 1927</li>
 </ol>
 </div></div>
 </nav>
@@ -58,7 +58,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
-<h1 id="wb-cont">History&nbsp;1927</h1>
+<h1 id="wb-cont">History 1927</h1>
 				<div class="option4">
 					<div class="smallFont" style="font-weight:bold;">
 						<img src="../images/historique_history/1927_1.jpg" alt="" width="300" height="236" /><br />
