--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -67,7 +67,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				<h2>Form</h2>
 				<p>If you would like an electronic response, please include your e-mail address.</p>
 				<p><strong>Please note:</strong> All personal information collected on this
-					form is protected under the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>.</p>
+					form is protected under the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html" rel="external"><em>Privacy Act</em></a>.</p>
 				<form method="post" action="/cgi-bin/generic_email.pl" id="clfcontactform">
 				   <p>
 					<!-- une adresse qui commence avec http:// est requise pour afficher la page de confirmation -->
@@ -154,14 +154,14 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					Works and Government Services Canada's Personal Information Bank number
 					PPU&nbsp;115&nbsp;Internet and PPE&nbsp;830&nbsp;Intranet Services, and it will be retained
 					according to the retention and disposal schedule established for this bank.</p>
-				<p>Your personal information is protected under the provisions of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>. Under the Act, you have the right to request access to and
+				<p>Your personal information is protected under the provisions of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html" rel="external"><em>Privacy Act</em></a>. Under the Act, you have the right to request access to and
 							correction of your personal information, if erroneous or incomplete. If
 							you wish to avail yourself of this right or require clarification about
 							this Statement, contact our Privacy Coordinator at <a href="mailto:AIPRP.ATIP@tpsgc-pwgsc.gc.ca">AIPRP.ATIP@tpsgc-pwgsc.gc.ca</a>.
 							For more information on privacy issues and the <em>Privacy Act</em> consult
-							the <a href="http://www.priv.gc.ca/index_e.asp">Privacy Commissioner's
+							the <a href="http://www.priv.gc.ca/index_e.asp" rel="external">Privacy Commissioner's
 							Web site</a>.</p>
-				<p>For more information about your rights, see <a href="http://infosource.gc.ca/index_e.asp">Info
+				<p>For more information about your rights, see <a href="http://infosource.gc.ca/index_e.asp" rel="external">Info
 						Source</a>. This is a Government of Canada publication available in major
 						libraries, at government information offices and from constituency offices
 						of federal Members of Parliament.</p>
