--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-eng.html -->
 <!-- TitleStart -->
-<title>QE Article &ndash; EGD &ndash; PWGSC</title>
+<title>QE Article - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="History of the Esquimalt Graving Dock" />
