--- a/index-eng.html
+++ b/index-eng.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-nav-eng.html -->
 <!-- TitleStart -->
-<title>Welcome &ndash; Esquimalt Graving Dock (EGD) &ndash; PWGSC</title>
+<title>Welcome - Esquimalt Graving Dock (EGD) - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
