--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -83,6 +83,9 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					shifts, the <abbr title="Queen Elizabeth">QE</abbr> sailed away an armed troop ship &ndash; and Victoria breathed a
 					sigh of relief.</p>
 				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="" width="349" height="418" /></div>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
