--- a/index-eng.html
+++ b/index-eng.html
@@ -10,18 +10,18 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-nav-eng.html -->
 <!-- TitleStart -->
-<title>Welcome - Esquimalt Graving Dock (EGD) - PWGSC</title>
+<title>Welcome - EGD - PWGSC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
 <meta name="dcterms.description" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
 <meta name="dcterms.creator" content="Government of Canada, Public Works and Government Services Canada" />
-<meta name="dcterms.title" content="Welcome - Esquimalt Graving Dock (EGD - PWGSC)" />
+<meta name="dcterms.title" content="Welcome - EGD - PWGSC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Ships; Wharfs; Indexes" />
 <meta name="dcterms.language" title="ISO639-2" content="eng" />
-<meta name="keywords" content="Esquimalt Graving Dock, " />
+<meta name="keywords" content="Esquimalt Graving Dock" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
 <!-- CustomScriptsCSSStart -->
