--- a/index-fra.html
+++ b/index-fra.html
@@ -10,18 +10,18 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Page de contenu + menu secondaire 1 - Thème de la facilité d'emploi Web GC - Exemples pratiques - Boîte à outils de l'expérience Web (BOEW)</title>
+<title>Bienvenue - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
-<meta name="description" content="French description / Description en français" />
-<meta name="dcterms.description" content="French description / Description en français" />
-<meta name="dcterms.creator" content="French name of the content author / Nom en français de l'auteur du contenu" />
-<meta name="dcterms.title" content="French title / Titre en français" />
-<meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)" />
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
+<meta name="dcterms.description" content="La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
+<meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
+<meta name="dcterms.title" content="Bienvenue - CSE - TPSGC" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
-<meta name="dcterms.subject" title="gccore" content="French subject terms / Termes de sujet en français" />
+<meta name="dcterms.subject" title="gccore" content="Navire; Quai; Index" />
 <meta name="dcterms.language" title="ISO639-2" content="fra" />
-<meta name="keywords" content="Mots-clés en anglais / English keywords" />
+<meta name="keywords" content="Cale s&egrave;che d'Esquimalt" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete-head.html" -->
 
