--- a/his/1925-eng.html
+++ b/his/1925-eng.html
@@ -73,6 +73,9 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<li><a href="1926-eng.html">History&nbsp;1926</a></li>
 					<li><a href="1927-eng.html">History&nbsp;1927</a></li>
 				</ul>
+<dl id="gcwu-date-mod" role="contentinfo">
+<dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
+</dl>
 </div></div>
 <div id="wb-sec"><div id="wb-sec-in">
 <!--#include virtual="/pac/cse-egd/includes/nav_gauche-nav_left-eng.html" -->
