French breadcrumbs and markup fixes

--- a/env/barrage-boom-fra.html
+++ b/env/barrage-boom-fra.html
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="programme-program-eng.html">Environnement</a></li>
+<li>La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</li>
 </ol>
 </div></div>
 </nav>
@@ -57,7 +59,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">La cale sèche d'Esquimalt fait barrage aux déversements de pétrole</h1>
+<h1 id="wb-cont">La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</h1>
 <p>Par  Dan del Villano </p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:300px;">
 					<img src="../images/lowering-the-boom-1.jpg" alt="" width="300" height="199" /><br />
