--- a/env/ecocivisme-environment-fra.html
+++ b/env/ecocivisme-environment-fra.html
@@ -10,7 +10,7 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>CSE : un exemple d'&eacute;cocivisme - CSE - TPSGC</title>
+<title>Un exemple d'&eacute;cocivisme - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="CSE : un exemple d'&eacute;cocivisme" />
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="programme-program-eng.html">Environnement</a></li>
+<li>Un exemple d'&eacute;cocivisme</li>
 </ol>
 </div></div>
 </nav>
@@ -57,7 +59,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">CSE : un exemple d'&eacute;cocivisme</h1>
+<h1 id="wb-cont">Un exemple d'&eacute;cocivisme</h1>
 				<p>par  Roy John<br />
 					chef d'&eacute;quipe, 
 Services d'enregistrement &ndash; Environnement, Syst&egrave;mes de sant&eacute; et de s&eacute;curit&eacute;
