--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -10,13 +10,13 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>Programme environnemental - CSE - TPSGC</title>
+<title>Environnement - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="Programme environnemental de la cale s&egrave;che d'Esquimalt." />
 <meta name="dcterms.description" content="Programme environnemental de la cale s&egrave;che d'Esquimalt." />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
-<meta name="dcterms.title" content="Programme environnemental - CSE - TPSGC" />
+<meta name="dcterms.title" content="Environnement - CSE - TPSGC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Navire; Quai; Programme relatif à l'environnement; Environnement; Politique environnementale; Qualit&eacute; de l'air; Gestion de l'eau; Gestion des déchets; Mati&egrave;re dangereuse; Conservation de l'&eacute;nergie; Conservation de la nature" />
@@ -48,6 +48,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li>Environnement</li>
 </ol>
 </div></div>
 </nav>
@@ -57,7 +58,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">Programme environnemental</h1>
+<h1 id="wb-cont">Environnement</h1>
       <img src="../images/dock-cale-2.jpg" alt="" width="300" height="400" style="float: right; padding-left: 10px;" />
 
       <p>
@@ -75,13 +76,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001
         concerant les <abbr title="syst&egrave;me de gestion de l'environnement">SGE</abbr>.
       </p>
-
-      <div class="topPage"> 
-        <a href="#wb-tphp" title="Retourner au haut de la page">
-          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-          Haut de la page
-        </a> 
-      </div>
 
       <h2 id="iso"><abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001</h2>
 
@@ -106,13 +100,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         des installations et de la collectivit&eacute; environnante.
       </p>
 
-      <div class="topPage"> 
-        <a href="#wb-tphp" title="Retourner au haut de la page">
-          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-          Haut de la page
-        </a> 
-      </div>
-
       <h2 id="policy-politique">Politique environnementale</h2>
 
       <p>
@@ -128,13 +115,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         le milieu naturel et &agrave; respecter la r&eacute;glementation et les
         normes environnementales applicables.
       </p>
-
-      <div class="topPage"> 
-        <a href="#wb-tphp" title="Retourner au haut de la page">
-          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-          Haut de la page
-        </a> 
-      </div>
 
       <h2 id="ebmps-mpges"> Meilleures pratiques de gestion de l'environnement</h2>
 
@@ -168,13 +148,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         veuillez communiquer avec le <a href="#coordonnateur-coordinator">Coordonnateur environnemental</a>.
       </p>
 
-      <div class="topPage"> 
-        <a href="#wb-tphp" title="Retourner au haut de la page">
-          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-          Haut de la page
-        </a> 
-      </div>
-
       <h2 id="articles">Articles d'Int&eacute;r&ecirc;t</h2>
 
       <ul>
@@ -183,13 +156,6 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
         <li><a href="barrage-boom-fra.html">La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</a> (2000) </li>
         <li><a href="voie-way-fra.html"><abbr title="cale s&egrave;che d'Esquimalt">CSE</abbr>&nbsp;: chef de file en voie vers la certification <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001</a>&nbsp;(2000)</li>
       </ul>
-
-      <div class="topPage"> 
-        <a href="#wb-tphp" title="Retourner au haut de la page">
-          <img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
-          Haut de la page
-        </a> 
-      </div>
 
       <h2 id="coordonnateur-coordinator">Coordonnateur environnemental</h2>
 
