--- a/env/voie-way-fra.html
+++ b/env/voie-way-fra.html
@@ -10,13 +10,13 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 2col-fra.html -->
 <!-- TitleStart -->
-<title>un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC</title>
+<title>Un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
 <meta name="description" content="CSE un chef de file en voie vers la certification ISO 14001" />
 <meta name="dcterms.description" content="CSE un chef de file en voie vers la certification ISO 14001" />
 <meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
-<meta name="dcterms.title" content="un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC" />
+<meta name="dcterms.title" content="Un chef de file en voie vers la certification ISO 14001 - CSE - TPSGC" />
 <meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
 <meta name="dcterms.subject" title="gccore" content="Navire; Quai; Environnement; Information;  Index" />
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="programme-program-eng.html">Environnement</a></li>
+<li>Un chef de file en voie vers la certification ISO 14001</li>
 </ol>
 </div></div>
 </nav>
@@ -57,7 +59,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-core"><div id="wb-core-in" class="equalize">
 <div id="wb-main" role="main"><div id="wb-main-in">
 <!-- MainContentStart -->
-<h1 id="wb-cont">un chef de file en voie vers la certification ISO 14001</h1>
+<h1 id="wb-cont">Un chef de file en voie vers la certification ISO 14001</h1>
 
 				<p>par Dan del Villano</p>
 				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
