--- a/merci-thankyou-fra.html
+++ b/merci-thankyou-fra.html
@@ -48,6 +48,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li>Merci</li>
 </ol>
 </div></div>
 </nav>
