--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -48,6 +48,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="programme-program-eng.html">Environnement</a></li>
+<li>Politique environnementale</li>
 </ol>
 </div></div>
 </nav>
