--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -48,6 +48,7 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-eng.html" -->
 <!--#include virtual="/pac/cse-egd/includes/pain-bread-section-eng.html" -->
+<li><a href="programme-program-eng.html">Environment</a></li>
 <li>Water Lot Remediation Project</li>
 </ol>
 </div></div>
