--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -47,7 +47,9 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="gcwu-bc"><h2>Fil d'Ariane</h2><div id="gcwu-bc-in">
 <ol>
 <!--#include virtual="/site/wet3.0/html5/includes/pain-bread-fra.html" -->
-<!--#include virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<!--#inclUn exemple d'&eacute;cocivismeude virtual="/pac/cse-egd/includes/pain-bread-section-fra.html" -->
+<li><a href="programme-program-eng.html">Environnement</a></li>
+<li>CSE: tarifs</li>
 </ol>
 </div></div>
 </nav>
