--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Licence-fra.txt -->
 <!-- WET 3.0, PWGSC 1.0 file: 1sp-pe-fra-eng.html -->
 <!-- TitleStart -->
-<title>Page d'entrée - Bilingue (fra-eng) - Thème de la facilité d'emploi Web GC - Boîte à outils de l'expérience Web (BOEW) / Splash page - Bilingual (fra-eng) - GC Web Usability theme - Working examples - Web Experience Toolkit (WET)</title>
+<title>Cale s&egrave;che d'Esquimalt / Esquimalt Graving Dock</title>
 <!-- TitleEnd -->
 <!-- MetadataStart -->
-<meta name="description" content="French description / Description en français" />
-<meta name="description" lang="en" content="English description / Description en anglais" />
-<meta name="dcterms.description" content="French description / Description en français" />
-<meta name="cdterms.description" lang="en" content="English description / Description en anglais" />
-<meta name="dcterms.creator" content="French name of the content author / Nom en français de l'auteur du contenu" />
-<meta name="dcterms.creator" lang="en" content="English name of the content author / Nom en anglais de l'auteur du contenu" />
-<meta name="dcterms.title" content="French title / Titre en français" />
-<meta name="dcterms.title" lang="en" content="English title / Titre en anglais" />
-<meta name="dcterms.issued" title="W3CDTF" content="Date published (YYYY-MM-DD) / Date de publication (AAAA-MM-JJ)" />
+<meta name="description" content="La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
+<meta name="description" lang="en" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
+<meta name="dcterms.description" content="La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la cote Ouest des Ameriques. Nous sommes situes dans un port ouvert a l'annee longue, sur l'ile de Vancouver, a proximite des voies d'acces a l'Alaska et aux pays riverains du Pacifique." />
+<meta name="cdterms.description" lang="en" content="The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. EGD is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are located in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim." />
+<meta name="dcterms.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
+<meta name="dcterms.creator" lang="en" content="Government of Canada, Public Works and Government Services Canada" />
+<meta name="dcterms.title" content="Cale s&egrave;che d'Esquimalt" />
+<meta name="dcterms.title" lang="en" content="Esquimalt Graving Dock" />
+<meta name="dcterms.issued" title="W3CDTF" content="2007-09-20" />
 <meta name="dcterms.modified" title="W3CDTF" content="<!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'-->" />
-<meta name="dcterms.subject" title="gccore" content="French subject terms / Termes de sujet en français" />
-<meta name="dcterms.subject" lang="en" title="gccore" content="English subject terms / Termes de sujet en anglais" />
+<meta name="dcterms.subject" title="gccore" content="Navire; Quai; Index" />
+<meta name="dcterms.subject" lang="en" title="gccore" content="Ships; Wharfs; Indexes" />
 <meta name="dcterms.language" title="ISO639-2" content="fra" />
 <meta name="dcterms.language" lang="en" title="ISO639-2" content="eng" />
-<meta name="keywords" content="Mots-clés en anglais / English keywords" />
-<meta name="keywords" lang="en" content="English keywords / Mots-clés en anglais" />
+<meta name="keywords" content="Cale s&egrave;che d'Esquimalt" />
+<meta name="keywords" lang="en" content="Esquimalt Graving Dock" />
 <!-- MetadataEnd -->
 <!--#include virtual="/boew-wet/wet3.0/html5/includes/tete_pe-sp_head.html" -->
 
@@ -56,9 +56,9 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <h1 id="wb-cont">Bienvenue / <span lang="en">Welcome</span></h1>
 
 <div id="gcwu-title">
-<div id="gcwu-title-left" class="span-3 margin-bottom-none">Travaux publics et Services gouvernementaux Canada</div>
+<div id="gcwu-title-left" class="span-3 margin-bottom-none">Cale s&egrave;che d'Esquimalt</div>
 <div class="span-2 margin-bottom-none"></div>
-<div id="gcwu-title-right" class="span-3 margin-bottom-none" lang="en">Public Works and Government Services Canada</div>
+<div id="gcwu-title-right" class="span-3 margin-bottom-none" lang="en">Esquimalt Graving Dock</div>
 <div class="clear"></div>
 </div>
 
