Fix article image

--- a/env/voie-way-eng.html
+++ b/env/voie-way-eng.html
@@ -59,11 +59,16 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <div id="wb-main" role="main"><div id="wb-main-in">
 <h1 id="wb-cont">Leading the Way with ISO 14001</h1>
 				<p>by Dan del Villano</p>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
-					Jim Milne (centre) and Environmental Coordinators, Daryl Lawes and Rae-Ann Shaw, on site at the Esquimalt Graving Dock.</div>When it comes to technology, most people think of machines. Pacific Region's
+          
+        <div class="span-4">
+        <p>
+          When it comes to technology, most people think of machines. Pacific Region's
 					Daryl Lawes and Rae-Ann Shaw also think about how <em>people</em> use the
 					technology.
-				<p>They are the Environmental Coordinators for the Esquimalt Graving Dock
+        </p>
+
+        <p>
+          They are the Environmental Coordinators for the Esquimalt Graving Dock
 					in British Columbia and they're working on <abbr title="International Organization for Standardization">ISO</abbr>&nbsp;14001 certification
 					for Canada's largest dry dock. Says Lawes, &quot;It is an exciting
 					project because we are the only large ship repair facility
@@ -106,6 +111,17 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 					<abbr title="Public Works and Government Services Canada">PWGSC</abbr>, the Esquimalt Graving Dock will be one of the best
 					options.</p>
 				<p><em>Source: Ensemble, July 2000, Volume&nbsp;8</em></p>
+        </div>
+
+        <div class="span-2">
+          <p>
+            <img src="../images/leading-the-way.jpg" alt="" />
+          </p>
+          <p>
+            <strong>Caption:</strong>
+            Jim Milne (centre) and Environmental Coordinators, Daryl Lawes and Rae-Ann Shaw, on site at the Esquimalt Graving Dock.
+          </p>
+        </div>
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date modified:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
 </dl>
