--- a/env/voie-way-fra.html
+++ b/env/voie-way-fra.html
@@ -61,10 +61,8 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 <!-- MainContentStart -->
 <h1 id="wb-cont">Un chef de file en voie vers la certification ISO 14001</h1>
 
+<div class="span-4">
 				<p>par Dan del Villano</p>
-				<div class="smallFont" style="font-weight:bold; float:right; padding-left:10px; width:200px;"><img src="../images/leading-the-way.jpg" alt="" width="200" height="124" /><br />
-				Jim Milne (au centre) et les coordonnateurs des services environnementaux, Daryl Lawes et Rae-Ann Shaw, &agrave; la cale s&egrave;che d'Esquimalt.</div>
-
 				Pour la plupart des gens, le concept de technologie fait penser &agrave; des machines. Pour Daryl Lawes et Rae-Ann Shaw, de la R&eacute;gion du Pacifique, il s'agit aussi de la fa&ccedil;on dont les gens utilisent ces machines.
 
 				<p>Ces deux coordonnateurs des services environnementaux de la cale s&egrave;che d'Esquimalt, en Colombie-Britannique, s'efforcent d'obtenir la certification <abbr title="Organisation internationale de normailisation">ISO</abbr>&nbsp;14001&nbsp;pour leur employeur, plus grande cale s&egrave;che du Canada. Selon M. Lawes, &laquo;&nbsp;il s'agit d'un projet stimulant puisque aucune autre grande installation de r&eacute;paration de navires au monde ne travaille &agrave; obtenir cette certification&nbsp;&raquo;. Leurs efforts devraient &ecirc;tre couronn&eacute;s de succ&egrave;s en avril&nbsp;2001.</p>
@@ -79,6 +77,14 @@ wet-boew.github.com/wet-boew/License-eng.txt / wet-boew.github.com/wet-boew/Lice
 
 				<p>Le syst&egrave;me environnemental rendra &eacute;galement la cale s&egrave;che plus concurrentielle. En effet, de nombreuses soci&eacute;t&eacute;s maritimes, et en particulier les op&eacute;rateurs de navires de croisi&egrave;re, veulent obtenir des services aussi &eacute;cologiques que possible. Et gr&acirc;ce &agrave; <abbr title='Travaux publics et Services gouvernementaux Canada'>TPSGC</abbr>, la cale s&egrave;che d'Esquimalt constituera d&eacute;sormais pour elles un des meilleurs choix.</p>
 				<p><em>Source&nbsp;: Ensemble, juillet 2000, volume&nbsp;8, no&nbsp;5</em></p>
+</div>
+<div class="span-2">
+  <img src="../images/leading-the-way.jpg" alt="" />
+  <p>
+    <strong>L&egrave;gende:</strong>
+    Jim Milne (au centre) et les coordonnateurs des services environnementaux, Daryl Lawes et Rae-Ann Shaw, &agrave; la cale s&egrave;che d'Esquimalt.
+  </p>
+</div>
 <!-- EndEditableContent -->
 <dl id="gcwu-date-mod" role="contentinfo">
 <dt>Date de modification&#160;:</dt><dd><span><time><!--#config timefmt='%Y-%m-%d'--><!--#echo var='LAST_MODIFIED'--></time></span></dd>
