--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -175,6 +175,9 @@
 					Canada</p>
 				<h3>Telephone us:</h3>
 				<p>250-363-3877&nbsp;or&nbsp;250-363-8056</p>			
+
+        <h3 style="color: red">Hotline:</h3>
+        <p>250-363-0227</p>
 				
 				<h3>Teletypewriter (TTY):</h3>
 				<p>Toll-free (for hearing-impaired):&nbsp;1-800-926-9105</p>
